WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204408
Regression (
r252660
): Layout Test platform/ios/mediastream/audio-muted-in-background-tab.html is failing
https://bugs.webkit.org/show_bug.cgi?id=204408
Summary
Regression (r252660): Layout Test platform/ios/mediastream/audio-muted-in-bac...
Aakash Jain
Reported
2019-11-20 04:53:53 PST
The following layout test is failing on iOS: platform/ios/mediastream/audio-muted-in-background-tab.html Flakiness Dashboard:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=platform%2Fios%2Fmediastream%2Faudio-muted-in-background-tab.html
https://results.webkit.org/?suite=layout-tests&test=platform%2Fios%2Fmediastream%2Faudio-muted-in-background-tab.html
e.g.:
https://build.webkit.org/results/Apple%20iOS%2013%20Simulator%20Debug%20WK2%20(Tests)/r252660%20(951)/results.html
https://ews-build.webkit.org/results/iOS-13-Simulator-WK2-Tests-EWS/r383865-5263/results.html
+++ /Volumes/Data/worker/iOS-13-Simulator-WK2-Tests-EWS/build/layout-test-results/platform/ios/mediastream/audio-muted-in-background-tab-actual.txt @@ -1,6 +1,6 @@ PASS Setup stream -PASS Hide page, video and audio should be muted +FAIL Hide page, video and audio should be muted assert_true: audio track is muted expected true got false
Attachments
Patch
(4.99 KB, patch)
2019-11-20 22:47 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(4.88 KB, patch)
2019-11-20 23:00 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Aakash Jain
Comment 1
2019-11-20 04:56:21 PST
Seems like a regression from
r252660
. It was passing in
r252658
, failed in
r252660
.
youenn fablet
Comment 2
2019-11-20 06:51:37 PST
Will check this tomorrow.
Radar WebKit Bug Importer
Comment 3
2019-11-20 10:35:26 PST
<
rdar://problem/57364353
>
Truitt Savell
Comment 4
2019-11-20 10:53:52 PST
marked test as failing while waiting for resolution in
https://trac.webkit.org/changeset/252695/webkit
youenn fablet
Comment 5
2019-11-20 22:27:26 PST
Probably, the active source is now in the core audio capture source factory while we are trying to go through the mock factory.
youenn fablet
Comment 6
2019-11-20 22:47:56 PST
Created
attachment 384031
[details]
Patch
youenn fablet
Comment 7
2019-11-20 23:00:16 PST
Created
attachment 384032
[details]
Patch
WebKit Commit Bot
Comment 8
2019-11-21 09:07:56 PST
Comment on
attachment 384032
[details]
Patch Clearing flags on attachment: 384032 Committed
r252737
: <
https://trac.webkit.org/changeset/252737
>
WebKit Commit Bot
Comment 9
2019-11-21 09:07:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug