Regression (r252660): Layout Test platform/ios/mediastream/audio-muted-in-background-tab.html is failing https://bugs.webkit.org/show_bug.cgi?id=204408 <rdar://problem/57364353>

Reviewed by Eric Carlson.

Source/WebCore:

Covered by no longer failing test.

* platform/mediastream/mac/CoreAudioCaptureSource.h:
* platform/mock/MockRealtimeMediaSourceCenter.cpp:
Now that we are using CoreAudioCaptureSource, we need to use its factory to interrupt/uninterrupt the active source.

LayoutTests:

* platform/ios/TestExpectations:


Canonical link: https://commits.webkit.org/217718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252737 268f45cc-cd09-0410-ab3c-d52691b4dbfc